--- a/Fig10/fig10_gpc_stats_mixeffectmodels.Rmd
+++ b/Fig10/fig10_gpc_stats_mixeffectmodels.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Statistics for figure 10 - granules per chloroplast"
 author: Jiawen Chen/Statistics Services Ltd (Reading, UK)
-output: html_document
+output: rmarkdown::github_document
 date: "2022-09-23"
 ---
 
