--- a/Fig10/fig10_gpc_stats_mixeffectmodels.Rmd
+++ b/Fig10/fig10_gpc_stats_mixeffectmodels.Rmd
@@ -5,7 +5,7 @@ output: rmarkdown::github_document
 date: "2022-09-23"
 ---
 
-We consulted Statistics Services Ltd (Reading, UK) for the analysis of our count data regarding granule per chloroplast, obtained from counting from light microscopy images of Arabidopsis leaf sections. 
+We consulted Statistics Services Ltd (Reading, UK) for the analysis of our count data regarding granule per chloroplast, obtained from counting from light microscopy images of wheat leaf sections. 
 
 We used mixed effects models for this, in order to take into account both the three biological replicates for each genotype (random effect), and the distribution of granule number chloroplast for each genotype. We tried a Poisson model first, but this showed overdispersion so we then proceeded with negative binomial models, which were not overdispersed. 
 
